# TIN-Project

./: .gitignore  Dokumentacja klienta C Sharp.md  Dokumentacja_Serwera.md  README.md  dokumentacja-glowna.md  python-client.md
Klient CSharp/: SieciowyInkScape.sln
Klient CSharp/SieciowyInkScape/: Client.cs  ClientEvents.cs  ClientReceiver.cs  DrawingAreaState.cs  LoginForm.Designer.cs  LoginForm.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  SieciowyInkScape.csproj
Klient CSharp/SieciowyInkScape/CURSORS/: cross.cur  mspaint_pencil_8bit.cur
Klient CSharp/SieciowyInkScape/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs  UserControl1.xaml  UserControl1.xaml.cs
SieciowyInkScape/: LoginForm.cs  MainForm.Designer.cs  MainForm.cs  SieciowyInkScape.csproj
django-client/: README.md  django-client.md  main.py
django-client/network_and_data/: __init__.py  network.py  receiver.py  sender.py
django-client/packets/: __init__.py  packet_receiver.py  packet_sender.py
pythonClient/: application.py  client.py  login.py  main.py
pythonClient/data/: __init__.py  message.py  messenger.py  parser.py
pythonClient/network/: __init__.py  network.py  receiver.py  sender.py
pythonClient/objects/: __init__.py  cursor.py  oval.py  path.py  rectangle.py
server/: CMakeLists.txt  README.md  main.cc  shadow.default
server/account_manager/: CMakeLists.txt  account_manager.cc  account_manager.h  registered_user.h
server/app/: CMakeLists.txt  artist.h  instr_supp.h  logged_user.cc  logged_user.h  out_message.cc  out_message.h  server.cc  server.h  server_instructions.cc  server_run.h  session.h  sever_run.cc  socket_stuff.cc  socket_stuff.h  world.cc  world.h
server/chat/: CMakeLists.txt  chat_msg.cc  chat_msg.h
server/configurator/: CMakeLists.txt  setting.h  the_config.cc  the_config.h
server/core/: CMakeLists.txt  artist.h  construct_fn.h  destroy_fn.h  factory.h  instr_fn.h  instr_id.h  instr_struct.h  instr_supp.h  logged_user.cc  logged_user.h  logger.cc  logger.h  mquads.h  msg_push_fn.h  ndouble.cc  ndouble.h  nquad.cc  nquad.h  out_message.cc  out_message.h  sel.cc  sel.h  server.cc  server.h  server_instructions.cc  sock_id.h  sock_stream_state.cc  sock_stream_state.h  socket.cc  socket.h  socket_stuff.cc  socket_stuff.h  socket_tcp4.cc  socket_tcp4.h  thread.cc  thread.h  username.cc  username.h  world.cc  (+3 more)
server/image/: CMakeLists.txt  basic_object.cc  basic_object.h  image.h  image_types.h  utility.h
server/image_objects/: CMakeLists.txt  ellipse.h  line_path.h  rectangle.h
server/instructions/: CMakeLists.txt  capture_session.cc  capture_session.h  create_shape.cc  create_shape.h  log_in.cc  log_in.h  log_out.cc  log_out.h  move_mouse.cc  move_mouse.h  req_ls_shapes.cc  req_ls_shapes.h  req_ls_users.cc  req_ls_users.h  say.cc  say.h
server/network/: CMakeLists.txt  network_manager.cc  network_manager.h  nws.cc  nws.h
server/send_msgs/: CMakeLists.txt  clear_canvas.cc  clear_canvas.h  list_shapes.cc  list_shapes.h  list_users.cc  list_users.h  log_off.cc  log_off.h  log_ok.cc  log_ok.h  mouse_moved.cc  mouse_moved.h  new_obj.cc  new_obj.h  sess_capt_ok.cc  sess_capt_ok.h  sig.cc  sig.h  user_msg.cc  user_msg.h  user_status.cc  user_status.h
server/src/: CMakeLists.txt  main.cc  server.h  some_sockets.cc
server/xd/: CMakeLists.txt  some_sockets.cc  some_sockets.h
